Fix clear notification after edit transaction from it

--- a/app/src/main/res/layout/activity_backup.xml
+++ b/app/src/main/res/layout/activity_backup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.yoshione.fingen.ActivityBackup">
+    tools:activity="com.yoshione.fingen.ActivityBackup">
 
     <include
         android:id="@+id/include2"
