--- a/app/src/main/res/layout/activity_references.xml
+++ b/app/src/main/res/layout/activity_references.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.yoshione.fingen.ActivityReferences"
+    tools:activity="com.yoshione.fingen.ActivityReferences"
     android:orientation="vertical">
 
     <include
