--- a/app/src/main/res/layout/activity_export_csv.xml
+++ b/app/src/main/res/layout/activity_export_csv.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent"
               android:fitsSystemWindows="true"
               android:orientation="vertical"
-              tools:context="com.yoshione.fingen.ActivityAdditional">
+              tools:activity="com.yoshione.fingen.ActivityAdditional">
 
 
     <include
