--- a/app/src/main/res/layout/activity_sms_list.xml
+++ b/app/src/main/res/layout/activity_sms_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.yoshione.fingen.ActivitySmsList">
+    tools:activity="com.yoshione.fingen.ActivitySmsList">
 
     <include
         android:layout_width="match_parent"
