--- a/app/src/main/res/layout/activity_sync_settings.xml
+++ b/app/src/main/res/layout/activity_sync_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.yoshione.fingen.ActivityAdditional"
+    tools:activity="com.yoshione.fingen.ActivityAdditional"
     android:orientation="vertical">
 
 
