--- a/app/src/main/res/layout/content_decoder.xml
+++ b/app/src/main/res/layout/content_decoder.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fts.ActivityScanQR"
+    tools:activity=".fts.ActivityScanQR"
     >
 
   <com.dlazaro66.qrcodereaderview.QRCodeReaderView
