--- a/app/src/main/res/layout/fragment_model_list.xml
+++ b/app/src/main/res/layout/fragment_model_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.yoshione.fingen.ActivitySmsList">
+    tools:activity="com.yoshione.fingen.ActivitySmsList">
 
     <com.yoshione.fingen.widgets.ContextMenuRecyclerView
         android:id="@+id/recycler_view"
