--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,6 +104,7 @@
         <item name="android:singleLine">true</item>
         <item name="android:textColorHint">@color/light_gray_text</item>
         <item name="android:inputType">textCapSentences</item>
+        <!--<item name="android:saveEnabled">true</item>-->
     </style>
 
     <style name="NotEditableEditText" parent="EditableEditText">
