--- a/app/src/main/res/layout/fragment_product_entry_edit.xml
+++ b/app/src/main/res/layout/fragment_product_entry_edit.xml
@@ -88,11 +88,38 @@
         app:layout_constraintTop_toTopOf="@+id/textInputLayoutProject"
         tools:ignore="ContentDescription" />
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayoutDepartament"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/imageButtonDeleteProject"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutProject"
+        android:hint="@string/ent_department">
+
+        <EditText
+            android:id="@+id/textViewDepartament"
+            style="@style/NotEditableEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine|textNoSuggestions"
+            tools:text="Быт еда" />
+    </android.support.design.widget.TextInputLayout>
+
+    <ImageButton
+        android:id="@+id/imageButtonDeleteDepartament"
+        style="@style/ClearButtonStyle"
+        android:layout_centerVertical="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDepartament"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayoutDepartament"
+        tools:ignore="ContentDescription" />
+
     <com.yoshione.fingen.widgets.AmountEditor
         android:id="@+id/amount_editor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutProject" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDepartament" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayoutQuantity"
