Squashed commit of the following:
commit 9c28e42211ee95e9589b1d665b8bb32db1635f22
Author: unwo <aleks.chk@gmail.com>
Date:   Thu Sep 19 22:15:29 2019 +1000

    идея с порядком

commit 3db632a3ff0deae4a1d346d3715f9578b135ebb4
Author: unwo <aleks.chk@gmail.com>
Date:   Thu Sep 19 22:10:34 2019 +1000

    фильтры

commit b36fcf631e4ad9a8b6ad32f606d9c00e48ce1c36
Author: unwo <aleks.chk@gmail.com>
Date:   Thu Sep 19 22:09:19 2019 +1000

    идея с порядком параметров

commit d3d1621a63590b4276ca6dc4690efa8c1fc9393b
Author: unwo <aleks.chk@gmail.com>
Date:   Wed Sep 18 22:33:38 2019 +1000

    departament в department

commit 55ba782d0c8b117eec2208490837480ee85adb23
Author: unwo <aleks.chk@gmail.com>
Date:   Wed Sep 18 22:04:43 2019 +1000

    еще

commit 7af206bc1c1f0b7fe360748ae7208ebbc5195748
Author: unwo <aleks.chk@gmail.com>
Date:   Wed Sep 18 21:30:31 2019 +1000

    еще какой-то фильтр

commit 9e306b6d31b4d231dc699a609a774e7a77ee3c6b
Author: unwo <aleks.chk@gmail.com>
Date:   Wed Sep 18 21:21:49 2019 +1000

    еще нашел

commit bd140d034a5aa636ed79545975cda957a473c292
Author: unwo <aleks.chk@gmail.com>
Date:   Tue Sep 17 22:57:13 2019 +1000

    еще небольшие изменения

commit c1047af0b36d1b3f71f87d3bb1e111489ad2a6b9
Author: unwo <aleks.chk@gmail.com>
Date:   Tue Sep 17 22:27:48 2019 +1000

    версия базы 36

commit 132af67ff38a039b3b01c6a61b8254646c3baea2
Author: unwo <aleks.chk@gmail.com>
Date:   Tue Sep 17 22:27:27 2019 +1000

    модификация базы для департамента

commit 9b1f9240dc6394360ac2b4851ea8e618088d34ee
Author: unwo <aleks.chk@gmail.com>
Date:   Tue Sep 17 22:19:21 2019 +1000

    продукт в базу

commit 3213adc09f369dcecd7f369118d3570d9ca8572a
Author: unwo <aleks.chk@gmail.com>
Date:   Tue Sep 17 22:16:32 2019 +1000

    конструктор продукта
    добавление в модель транзакции

commit d657934fa3d2fffc80720de2420f2af9b3b87218
Author: unwo <aleks.chk@gmail.com>
Date:   Tue Sep 17 21:36:05 2019 +1000

    добавлен код в FragmentProductEntryEdit
    немно

--- a/app/src/main/res/layout/fragment_product_entry_edit.xml
+++ b/app/src/main/res/layout/fragment_product_entry_edit.xml
@@ -89,7 +89,7 @@
         tools:ignore="ContentDescription" />
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayoutDepartament"
+        android:id="@+id/textInputLayoutDepartment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@id/imageButtonDeleteProject"
@@ -98,7 +98,7 @@
         android:hint="@string/ent_department">
 
         <EditText
-            android:id="@+id/textViewDepartament"
+            android:id="@+id/textViewDepartment"
             style="@style/NotEditableEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,19 +107,19 @@
     </android.support.design.widget.TextInputLayout>
 
     <ImageButton
-        android:id="@+id/imageButtonDeleteDepartament"
+        android:id="@+id/imageButtonDeleteDepartment"
         style="@style/ClearButtonStyle"
         android:layout_centerVertical="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDepartament"
-        app:layout_constraintTop_toTopOf="@+id/textInputLayoutDepartament"
+        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDepartment"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayoutDepartment"
         tools:ignore="ContentDescription" />
 
     <com.yoshione.fingen.widgets.AmountEditor
         android:id="@+id/amount_editor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDepartament" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDepartment" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayoutQuantity"
