--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/buttonsBarContainer">
+        android:layout_above="@id/bottomNavigation">
 
         <include
             layout="@layout/common_tabbed_appbar"
@@ -24,51 +24,12 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <FrameLayout
-        android:id="@+id/buttonsBarContainer"
+    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
+        android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="?listItemBackground"
-        android:elevation="4dp">
-
-        <LinearLayout
-            android:id="@+id/buttonsBar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/buttonScanQR"
-                style="@style/BottomBarButton"
-                android:drawableTop="@drawable/selector_scan_qr"
-                android:text="@string/ttl_scan_qr"/>
-
-            <Button
-                android:id="@+id/buttonTemplates"
-                style="@style/BottomBarButton"
-                android:drawableTop="@drawable/selector_templates"
-                android:text="@string/ent_templates"/>
-
-            <Button
-                android:id="@+id/buttonNewExpense"
-                style="@style/BottomBarButton"
-                android:drawableTop="@drawable/selector_expense"
-                android:text="@string/ent_outcome" />
-
-            <Button
-                android:id="@+id/buttonNewIncome"
-                style="@style/BottomBarButton"
-                android:drawableTop="@drawable/selector_income"
-                android:text="@string/ent_income" />
-
-            <Button
-                android:id="@+id/buttonNewTransfer"
-                style="@style/BottomBarButton"
-                android:drawableTop="@drawable/selector_transfer"
-                android:text="@string/ent_transfer" />
-        </LinearLayout>
-    </FrameLayout>
-
+        android:elevation="4dp" />
 
 </RelativeLayout>
