--- a/app/src/main/res/layout/content_decoder.xml
+++ b/app/src/main/res/layout/content_decoder.xml
@@ -7,7 +7,7 @@
     tools:activity=".fts.ActivityScanQR"
     >
 
-  <com.dlazaro66.qrcodereaderview.QRCodeReaderView
+  <SurfaceView
       android:id="@+id/qrdecoderview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
