--- a/app/src/main/res/values/string_arrays.xml
+++ b/app/src/main/res/values/string_arrays.xml
@@ -30,22 +30,26 @@
         <item>@string/ent_summary</item>
         <item>@string/ent_accounts</item>
         <item>@string/ent_transactions</item>
+        <item>@string/ent_debts</item>
     </string-array>
     <string-array name="pref_start_tab_values" translatable="false">
         <item>summary</item>
         <item>accounts</item>
         <item>transactions</item>
+        <item>debts</item>
     </string-array>
 
     <string-array name="pref_tabs_order" translatable="false">
         <item>@string/ent_summary</item>
         <item>@string/ent_accounts</item>
         <item>@string/ent_transactions</item>
+        <item>@string/ent_debts</item>
     </string-array>
     <string-array name="pref_tabs_order_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <string-array name="pref_theme_titles" translatable="false">
