--- a/app/src/main/res/xml/prefs_general.xml
+++ b/app/src/main/res/xml/prefs_general.xml
@@ -46,8 +46,12 @@
             android:title="@string/pref_hide_sums_panel"/>
         <SwitchPreference
             android:defaultValue="true"
-            android:key="expand_lists"
-            android:title="@string/pref_expand_lists"/>
+            android:key="show_closed_debts"
+            android:title="@string/pref_show_closed_debts" />
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="switch_preference_1"
+            android:title="@string/pref_expand_lists" />
         <SwitchPreference
             android:defaultValue="true"
             android:key="enable_scan_qr"
