--- a/app/src/main/res/layout/activity_edit_transaction.xml
+++ b/app/src/main/res/layout/activity_edit_transaction.xml
@@ -260,8 +260,7 @@
                         android:id="@+id/textViewProject"
                         style="@style/NotEditableEditText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:text="Проект"/>
+                        android:layout_height="wrap_content"/>
                 </android.support.design.widget.TextInputLayout>
 
                 <ImageButton
